--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,17 @@ language: cpp
 sudo: required
 dist: trusty
 compiler: g++-8
-os: linux
+matrix:
+  include:
+    - os: linux
+          addons:
+            apt:
+              sources:  
+                - ubuntu-toolchain-r-test
+              packages:
+                - g++-7
+          env:
+            - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
 install:
   - sudo apt-get install cmake
 script:
